fullSandbox11072023/force-app/main/default/objects/Pricing_Request__c/Pricing_Request__c.object-meta.xml
<CustomObject>
    <description>The Pricing Request Form is used to initiate a formal quote for Teleflex Products.</description>
    <label>Pricing Request</label>
    <nameField>
        <displayFormat>PRF-{000000}</displayFormat>
        <label>Pricing Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pricing Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>