fullSandbox11072023/force-app/main/default/objects/Pricing_Request__c/fields/Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_Date__c</fullName>
    <description>Date of the approval.</description>
    <label>Approval Date</label>
    <type>Date</type>
</CustomField>