fullSandbox11072023/force-app/main/default/objects/Pricing_Request__c/fields/Approved_by__c.field-meta.xml
<CustomField>
    <fullName>Approved_by__c</fullName>
    <description>Represents the approver of this request.</description>
    <label>Approved by</label>
    <length>25</length>
    <type>Text</type>
</CustomField>