fullSandbox11072023/force-app/main/default/objects/Pricing_Request__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Additional comments on this Pricing Requisition.</description>
    <inlineHelpText>Do you have any additional comments?</inlineHelpText>
    <label>Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>