fullSandbox11072023/force-app/main/default/objects/Pricing_Request__c/fields/Dealer_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Account_Number__c</fullName>
    <description>Dealer&apos;s account number.</description>
    <formula>Dealer_Name__r.LatAm_Account_Code__c</formula>
    <label>Dealer Account Number</label>
    <type>Text</type>
</CustomField>