fullSandbox11072023/force-app/main/default/objects/Pricing_Request__c/fields/Dealer_Name__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This lookup field allows you identify the Account information associated with this PRF.</description>
    <inlineHelpText>What is the name of Dealer&apos;s Account?</inlineHelpText>
    <label>Dealer Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pricing Requests</relationshipLabel>
    <relationshipName>Pricing_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>