fullSandbox11072023/force-app/main/default/objects/Pricing_Request__c/fields/Tender_Number__c.field-meta.xml
<CustomField>
    <fullName>Tender_Number__c</fullName>
    <description>This is the number of the Tender provided by the requestor.</description>
    <inlineHelpText>What is the Tender Number?</inlineHelpText>
    <label>Tender Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>