fullSandbox11072023/force-app/main/default/objects/Pricing_Request__c/validationRules/Tender_Number_Required_wTender.validationRule-meta.xml
<ValidationRule>
    <fullName>Tender_Number_Required_wTender</fullName>
    <active>true</active>
    <description>If Tender is selected from the Status Picklist then this field is required.</description>
    <errorConditionFormula>IsPickVal(Status__c,&quot;Tender&quot;) &amp;&amp;  Tender_Number__c = &quot;&quot;</errorConditionFormula>
    <errorDisplayField>Tender_Number__c</errorDisplayField>
    <errorMessage>The Tender Number is required when Tender is selected.</errorMessage>
</ValidationRule>